--- a/.github/workflows/c-make.yml
+++ b/.github/workflows/c-make.yml
@@ -13,8 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: configure
-      run: ./configure
+    - name: Makefile
+      run: make
     - name: make
       run: make
     - name: make check
