--- a/.github/workflows/c-make.yml
+++ b/.github/workflows/c-make.yml
@@ -12,12 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Makefile
-      run: make
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+      - name: checkout repo
+        uses: actions/checkout@main
+      - name: build shell
+        run: make build
